--- a/Journal App/package.json
+++ b/Journal App/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dallas_app",
+  "name": "journal_app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
