--- a/Journal App/app.json
+++ b/Journal App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "journal_app",
-    "slug": "journal_app",
+    "name": "journalapp",
+    "slug": "journalapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -24,7 +24,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.spazims.journal_app"
+      "package": "com.spazims.journalapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
