--- a/Journal App/package.json
+++ b/Journal App/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-select-dropdown": "^1.7.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
