change method of sending/reading data

--- a/Journal App/app.json
+++ b/Journal App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "journalapp",
-    "slug": "journalapp",
+    "name": "Kiwi Gardeners",
+    "slug": "KiwiGardeners",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
