--- a/Journal App/.gitignore
+++ b/Journal App/.gitignore
@@ -1,5 +1,8 @@
 node_modules/
-assets/
+assets/adaptive-icon.png
+assets/icon.png
+assets/splash.png
+assets/favicon.png
 components/inputs.js
 .expo/
 dist/
