--- a/Journal App/package.json
+++ b/Journal App/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.25.0",
     "expo": "~44.0.0",
     "expo-crypto": "~10.1.1",
+    "expo-linking": "^3.0.0",
     "expo-status-bar": "~1.2.0",
     "https": "^1.0.0",
     "react": "17.0.1",
