--- a/Journal App/.gitignore
+++ b/Journal App/.gitignore
@@ -3,6 +3,7 @@ assets/adaptive-icon.png
 assets/icon.png
 assets/splash.png
 assets/favicon.png
+assets/login.png
 components/inputs.js 
 .expo/
 dist/
