--- a/Journal App/package.json
+++ b/Journal App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "journal_app",
-  "version": "1.0.0",
+  "version": "1.1.5",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -18,6 +18,7 @@
     "expo": "~44.0.0",
     "expo-crypto": "~10.1.1",
     "expo-linking": "^3.0.0",
+    "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "https": "^1.0.0",
     "react": "17.0.1",
