--- a/Journal Server/package.json
+++ b/Journal Server/package.json
@@ -16,7 +16,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
-    "mysql": "^2.18.1"
+    "mersenne-twister": "^1.1.0",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
