--- a/Journal App/package.json
+++ b/Journal App/package.json
@@ -10,7 +10,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^4.0.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -35,7 +34,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "react-table": "^7.7.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "@react-native-community/datetimepicker": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
